MySFOrg/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <picklist>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <picklistValues>
                <fullName>Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Same</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uplift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>